<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spinnernote"
        android:layout_width="235dp"
        android:layout_height="0dp"
        android:layout_marginStart="96dp"
        android:entries="@array/un_a_5"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="92dp"
        android:text="@string/noterevue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textVCommentaires" />

    <EditText
        android:id="@+id/editTextREvue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBaseline_toBaselineOf="@+id/textVCommentaires"
        app:layout_constraintStart_toEndOf="@+id/textVCommentaires" />

    <TextView
        android:id="@+id/textVCommentaires"
        android:layout_width="82dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:text="@string/revue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textVtitre" />

    <Button
        android:id="@+id/buttonphoto"
        android:layout_width="103dp"
        android:layout_height="42dp"
        android:backgroundTint="@color/orange"
        android:text="@string/photo"
        app:layout_constraintStart_toEndOf="@+id/photosoulier"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/soumettre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textVtitre"
        android:layout_width="82dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="174dp"
        android:text="@string/titre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photosoulier" />

    <EditText
        android:id="@+id/editTextTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBaseline_toBaselineOf="@+id/textVtitre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.342"
        app:layout_constraintStart_toEndOf="@+id/textVtitre" />

    <ImageView
        android:id="@+id/photosoulier"
        android:layout_width="200dp"
    android:layout_height="200dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>