<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/pageaceuille"
        android:title="@string/navigation"
        app:showAsAction="collapseActionView"
    />
    <item
        android:id="@+id/ajouter"
        android:title="@string/ajoutersoulier"
        app:showAsAction="collapseActionView"
    />
</menu>